# kv-database

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
docs/: ARCHITECTURE.md  REQUIREMENTS.md  example-api.rs
examples/: basic.rs  concurrent.rs  custom_config.rs  iterators.rs  transactions.rs
src/: db.rs  error.rs  lib.rs  options.rs  types.rs
src/cache/: block_cache.rs  lru.rs  mod.rs  table_cache.rs
src/compaction/: background.rs  compactor.rs  merge_iterator.rs  mod.rs  picker.rs
src/iterator/: db_iterator.rs  mod.rs
src/memtable/: arena.rs  mod.rs
src/metrics/: collector.rs  db_metrics.rs  mod.rs
src/sstable/: block.rs  block_builder.rs  filter.rs  iterator.rs  mod.rs  reader.rs  writer.rs
src/transaction/: manager.rs  mod.rs  snapshot.rs  transaction.rs
src/util/: coding.rs  comparator.rs  crc.rs  filename.rs  mod.rs
src/version/: file_metadata.rs  manifest.rs  mod.rs  version.rs  version_edit.rs  version_set.rs
src/wal/: mod.rs  reader.rs  writer.rs
tests/: integration_tests.rs  stress_tests.rs
